<resources>
    <string name="app_name">SOTD</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="text_prescreen">You must connect your Spotify account.</string>
    <string name="button_connect_spotify">Connect</string>
    <string name="button_disconnect_spotify">Disconnect</string>
    <string name="button_open_track_in_spotify">Open Track in Spotify</string>
    <string name="button_open">Open</string>

    <!-- Preferences -->
    <string name="pref_title_category_seeds">Seeds</string>
    <string name="pref_title_category_track_attributes">Track Attributes</string>

    <string name="pref_title_toggle_push_notifications">Enable push notifications</string>
    <string name="pref_title_toggle_track_attributes">Use track attributes for recommendations</string>

    <string name="pref_title_genres">Genres</string>
    <string name="pref_summary_genres">Recommended songs will be from the selected genres.</string>
    <string name="pref_dialog_title_genres">Select up to 5</string>

    <string name="pref_title_min_duration">Minimum Duration</string>
    <string name="pref_summary_min_duration">(seconds)</string>
    <string name="pref_title_max_duration">Maximum Duration</string>
    <string name="pref_summary_max_duration">(seconds)</string>
    <string name="pref_title_acousticness">Acousticness</string>
    <string name="pref_summary_acousticness">Predicts whether the track is acoustic.</string>
    <string name="pref_title_danceability">Danceability</string>
    <string name="pref_summary_danceability">Measures how suitable a track is for dancing.</string>
    <string name="pref_title_energy">Energy</string>
    <string name="pref_summary_energy">Measures the intensity and activity of a track.</string>
    <string name="pref_title_instrumentalness">Instrumentalness</string>
    <string name="pref_summary_instrumentalness">Predicts whether a track contains no vocals.</string>
    <string name="pref_title_liveness">Liveness</string>
    <string name="pref_summary_liveness">Predicts the presence of an audience in the recording.</string>
    <string name="pref_title_loudness">Loudness</string>
    <string name="pref_summary_loudness">The overall loudness of a track in decibels (dB).</string>
    <string name="pref_title_popularity">Popularity</string>
    <string name="pref_summary_popularity">Measures the popularity of a track.</string>
    <string name="pref_title_speechiness">Speechiness</string>
    <string name="pref_summary_speechiness">Detects the presence of spoken words in a track. (Values above 66 describe tracks that are probably made entirely of spoken words)</string>
    <string name="pref_title_tempo">Tempo</string>
    <string name="pref_summary_tempo">Beats per minute (BPM)</string>
    <string name="pref_title_valence">Valence</string>
    <string name="pref_summary_valence">Measures the musical positiveness (happy, cheerful, euphoric) conveyed by a track.</string>

    <string name="pref_title_disconnect_spotify">Disconnect Spotify</string>
</resources>