<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="toggle_push_notifications"
        app:title="@string/pref_title_toggle_push_notifications"
        app:icon="@drawable/ic_notifications_black_24dp"/>

    <PreferenceCategory
        app:title="@string/pref_title_category_seeds"
        app:allowDividerBelow="false">
        <MultiSelectListPreference
            android:key="selected_genres"
            android:title="@string/pref_title_genres"
            android:summary="@string/pref_summary_genres"
            android:dialogTitle="@string/pref_dialog_title_genres"
            android:entries="@array/pref_mslist_genres_entries"
            android:entryValues="@array/pref_mslist_genres_entry_values"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_title_category_track_attributes"
        app:allowDividerAbove="false">

        <SwitchPreferenceCompat
            app:key="toggle_track_attributes"
            app:title="@string/pref_title_toggle_track_attributes"/>

        <SeekBarPreference
            android:key="min_duration"
            android:title="@string/pref_title_min_duration"
            android:summary="@string/pref_summary_min_duration"
            app:min="@integer/pref_min_min_duration"
            android:max="@integer/pref_max_min_duration"
            android:defaultValue="@integer/pref_default_min_duration"
            app:showSeekBarValue="true"
            app:updatesContinuously="true"
            android:dependency="toggle_track_attributes"
            />
        <SeekBarPreference
            android:key="max_duration"
            android:title="@string/pref_title_max_duration"
            android:summary="@string/pref_summary_max_duration"
            app:min="@integer/pref_min_max_duration"
            android:max="@integer/pref_max_max_duration"
            android:defaultValue="@integer/pref_default_max_duration"
            app:showSeekBarValue="true"
            app:updatesContinuously="true"
            android:dependency="toggle_track_attributes"
            />
        <SeekBarPreference
            android:key="acousticness"
            android:title="@string/pref_title_acousticness"
            app:showSeekBarValue="true"
            android:defaultValue="@integer/pref_default_most"
            android:dependency="toggle_track_attributes"
            />
        <SeekBarPreference
            android:key="danceability"
            android:title="@string/pref_title_danceability"
            app:showSeekBarValue="true"
            android:defaultValue="@integer/pref_default_most"
            android:dependency="toggle_track_attributes"
            />
        <SeekBarPreference
            android:key="energy"
            android:title="@string/pref_title_energy"
            app:showSeekBarValue="true"
            android:defaultValue="@integer/pref_default_most"
            android:dependency="toggle_track_attributes"
            />
        <SeekBarPreference
            android:key="instrumentalness"
            android:title="@string/pref_title_instrumentalness"
            app:showSeekBarValue="true"
            android:defaultValue="@integer/pref_default_most"
            android:dependency="toggle_track_attributes"
            />
        <SeekBarPreference
            android:key="liveness"
            android:title="@string/pref_title_liveness"
            app:showSeekBarValue="true"
            android:defaultValue="@integer/pref_default_most"
            android:dependency="toggle_track_attributes"
            />
        <SeekBarPreference
            android:key="loudness"
            android:title="@string/pref_title_loudness"
            app:showSeekBarValue="true"
            android:defaultValue="@integer/pref_default_most"
            android:dependency="toggle_track_attributes"
            />
        <SeekBarPreference
            android:key="popularity"
            android:title="@string/pref_title_popularity"
            app:showSeekBarValue="true"
            android:defaultValue="@integer/pref_default_most"
            android:dependency="toggle_track_attributes"
            />
        <SeekBarPreference
            android:key="speechiness"
            android:title="@string/pref_title_speechiness"
            app:showSeekBarValue="true"
            android:defaultValue="@integer/pref_default_most"
            android:dependency="toggle_track_attributes"
            />
        <SeekBarPreference
            android:key="tempo"
            android:title="@string/pref_title_tempo"
            android:summary="@string/pref_summary_tempo"
            app:showSeekBarValue="true"
            android:defaultValue="@integer/pref_default_tempo"
            android:max="@integer/pref_max_tempo"
            android:dependency="toggle_track_attributes"
            />
        <SeekBarPreference
            android:key="valence"
            android:title="@string/pref_title_valence"
            app:showSeekBarValue="true"
            android:defaultValue="@integer/pref_default_most"
            android:dependency="toggle_track_attributes"
            />
    </PreferenceCategory>

    <com.sotd.ui.settings.DisconnectButtonPreference
        android:key="disconnect_button"
        android:title="@string/pref_title_disconnect_spotify"
        android:widgetLayout="@layout/pref_disconnect_button"
        app:allowDividerAbove="true"
        app:selectable="false"
        />
</PreferenceScreen>